# archiagent

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
docs/: 01-product-brief.html  01-product-brief.md  02-architecture.html  02-architecture.md  03-demo.html  03-demo.md  04-scenario-walkthrough.md  05-demo-recording.md  presentation.html  sample-design.html  sample-requirements.html
examples/bank-nextgen/: change.md  current-system.md  interview.md  rfp.md
scripts/: demo.py  setup.sh
src/archiagent/: __init__.py  agent.py  cli.py  prompts.py  schema.py
src/archiagent/model/: __init__.py  base.py  claude.py  fake.py
src/archiagent/render/: __init__.py  html.py
src/archiagent/store/: __init__.py  base.py  sqlite_store.py
src/archiagent/tools/: __init__.py  kb_artifact_ingest.py  kb_change_assess.py  kb_doc_export.py  kb_doc_generate.py  kb_graph_query.py  kb_graph_upsert.py
tests/: test_model.py  test_scenario_5_1.py  test_scenario_5_2_5_4.py  test_store.py  test_tools.py
tests/integration/: test_live.py
